<resources>
    <string name="app_name">MovieCatalog4</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>

    <string name="add_favorite"> Tambah Favorit</string>
    <string name="delete_fav">Hapus Favorite</string>
    <string name="appwidget_text" translatable="false">Widget Movie Favorit</string>
    <string name="add_widget" translatable="false">Add widget</string>
    <string name="tab_text_1">Film</string>
    <string name="tab_text_2">Acara Tv</string>
    <string name="tab_text_3">Favorite</string>
    <string name="This_is_tab">Ini Adalah Tab</string>
    <string name="name_movie">Judul Film</string>
    <string name="desc">Deskripsi Film</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_8">8</string>
    <string name="judul">Judul</string>
    <string name="txt_Rilis">Tanggal Rilis</string>
    <string name="txt_rating">Penilaian</string>
    <string name="txt_sinposis">Sinopsis</string>
    <string name="change_language_settings">Ubah Pengaturan Bahasa</string>
    <string name="time_out">Waktu koneksi habis</string>
    <string name="no_connection">Anda tidak terhubung jaringan</string>
    <string name="search">Search</string>
    <string name="title_activity_settings" translatable="false">"Setting "</string>
    <string name="setting" translatable="false">Setting</string>
    <string name="empty_text">empty</string>
    <string name="Bahasa">Language</string>
    <string name="select_language">Select Language</string>
    <string name="setting_language">Setting Language</string>
    <string name="reminder_everyday">Daily Reminder</string>
    <string name="summary_reminder_everyday">Remind me at 7.00 am to open app</string>
    <string name="movie_today">Movie Release Today</string>
    <string name="summary_movie_today">Remind me if there are new movies today</string>
</resources>
